samples/_failures_safe/1761253572_d7102f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e573631.c: In function ‘main’:
./samples/SAFE/__tmp_4e573631.c:168:25: error: expected ‘;’ at end of input
  168 |         print_token_type
      |                         ^
      |                         ;
./samples/SAFE/__tmp_4e573631.c:168:9: error: expected declaration or statement at end of input
  168 |         print_token_type
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4e573631.c:168:9: error: expected declaration or statement at end of input
